--- a/client/.env.sample
+++ b/client/.env.sample
@@ -1,3 +1,3 @@
 # API Configuration
 # Set this to your Express backend URL once deployed
-VITE_API_BASE_URL=http://localhost:4000
+VITE_API_BASE_URL=https://collabhub-fdy7.onrender.com
